--- a/Pousada desktop/PousadaDesk.csproj
+++ b/Pousada desktop/PousadaDesk.csproj
@@ -115,5 +115,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PousadaClass\PousadaClass.csproj">
+      <Project>{255d8b31-20b1-4598-b57e-1b99b1e2a98d}</Project>
+      <Name>PousadaClass</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
