Visual funcionario, não é mais em pagina

--- a/Pousada desktop/PousadaDesk.csproj
+++ b/Pousada desktop/PousadaDesk.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -135,6 +136,9 @@
       <Project>{255d8b31-20b1-4598-b57e-1b99b1e2a98d}</Project>
       <Name>PousadaClass</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mais.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
