--- a/Pousada desktop/PousadaDesk.csproj
+++ b/Pousada desktop/PousadaDesk.csproj
@@ -159,5 +159,8 @@
     <None Include="Resources\loginwall.png" />
     <None Include="Resources\mais.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\olho.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
