--- a/PousadaClass/PousadaClass.csproj
+++ b/PousadaClass/PousadaClass.csproj
@@ -84,10 +84,14 @@
   <ItemGroup>
     <Compile Include="Banco.cs" />
     <Compile Include="Cargo.cs" />
+    <Compile Include="Cliente.cs" />
+    <Compile Include="ClienteEndereco.cs" />
+    <Compile Include="ClienteTelefone.cs" />
     <Compile Include="Funcionario.cs" />
     <Compile Include="FuncionarioEndereco.cs" />
     <Compile Include="FuncionarioTelefone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reserva.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
