--- a/Pousada desktop/PousadaDesk.csproj
+++ b/Pousada desktop/PousadaDesk.csproj
@@ -87,11 +87,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmCliente.cs">
+    <Compile Include="FrmClienteCadastrar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmCliente.Designer.cs">
-      <DependentUpon>FrmCliente.cs</DependentUpon>
+    <Compile Include="FrmClienteCadastrar.Designer.cs">
+      <DependentUpon>FrmClienteCadastrar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmClienteAlterar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmClienteAlterar.Designer.cs">
+      <DependentUpon>FrmClienteAlterar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmClienteListar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmClienteListar.Designer.cs">
+      <DependentUpon>FrmClienteListar.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmFuncionarioCadastrar.cs">
       <SubType>Form</SubType>
@@ -119,8 +131,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FrmCliente.resx">
-      <DependentUpon>FrmCliente.cs</DependentUpon>
+    <EmbeddedResource Include="FrmClienteCadastrar.resx">
+      <DependentUpon>FrmClienteCadastrar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmClienteListar.resx">
+      <DependentUpon>FrmClienteListar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmFuncionarioCadastrar.resx">
       <DependentUpon>FrmFuncionarioCadastrar.cs</DependentUpon>
