--- a/PousadaClass/PousadaClass.csproj
+++ b/PousadaClass/PousadaClass.csproj
@@ -90,9 +90,12 @@
     <Compile Include="Funcionario.cs" />
     <Compile Include="FuncionarioEndereco.cs" />
     <Compile Include="FuncionarioTelefone.cs" />
+    <Compile Include="Pedido_Reserva.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quarto.cs" />
     <Compile Include="Reserva.cs" />
     <Compile Include="Status.cs" />
+    <Compile Include="TipoQuarto.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
